# psr3_logging

./: LICENSE.txt  README.md  pyproject.toml
prs3_logging.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
psr3_logging/: Logger.py  __init__.py
