[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prs3_logging"
version = "0.1.0"
description = "A psr3 compliant logging interface for python"
authors = [{ name = "Toby Dixon", email = "toby.dixon@idealsalessolutions.co.uk" }]
license = {text = "MIT"}
readme = "README.md"
dependencies = []  

[project.urls]
Homepage = "https://github.com/toby-dixon/psr3_logging"